--- a/src/App.css
+++ b/src/App.css
@@ -1,347 +1,3 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
-/* body{
-  margin: 0;
-  font-family: "Roboto",sans-serif;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p{
-  margin: 0;
-}
-:root{
-  --primary: #5e3bee;
-  --heading-color: #282938;
-  --bg-shade: #f5fcff;
-  --github: #e62872;
-  --darkblue: #1c1e53;
-  --black: #000000;
-  --white: #ffffff;
-} */
-
-/* .btn{
-  font-family: 'Roboto';
-  display: inline-block;
-  padding: 14px 32px;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.5s;
-}
-
-.main-section-content-box{
-  background-position: center;
-  height: 100vh;
-  min-height: 80rem;
-  max-height: 120rem;
-  position: relative;
-}
-
-.main-section-content{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  max-width: 90rem;
-  width: 92%;
-}
-
-.main-section-content p{
-  font-size: 3rem;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  text-align: center;
-  color: #111;
-  font-weight: 800;
-}
-.main-section-content span{
-  color: #333;
-  font-size: 1.3rem;
-  text-align: center;
-  width: 100%;
-  line-height: 1.6;
-}
-
-#mainSection{
-  background: linear-gradient(to right,rgba(245,245,245,.8),rgba(245,245,245,.8)),url(/daac885…/c157c/assets/svg/common-bg.svg);
-} */
-/*  */
-/* .navbar{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  width: 100%;
-  z-index: 1000;
-  background: #000;
-  background: #fff;
-  box-shadow: 0 10px 100px rgba(0,0,0,.1);
-}
-
-.logo-div{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.logo-div span{
-  font-size: 21px;
-  text-transform: uppercase;
-}
-
-.logo-div span:hover{
-  color: blue;
-  cursor: pointer;
-}
-
-.main-section-info{
-  margin: 3rem auto 0 auto;
-  max-width: 80rem;
-}
-.main-section-btn{
-  margin-top: 5rem;
-  text-align: center;
-}
-a{
-  text-decoration: none;
-  font-size: 18px;
-  color: #000;
-}
-
-a:hover{
-  color: blue;
-  border-bottom: 1px solid blue;
-  transition: 0.1s;
-}
-
-.mySkills,.projects,.Contact{
- padding: 8rem 0; 
-}
-
-.skill-container,.projects-container,.contact-container{
-  max-width: 120rem;
-  margin: auto;
-  width: 92%;
-} */
-
-/* .skill{
-  display: inline-block;
-  margin: 50px 50px;  
-}
-
-.skill-heading,.projects-header,.contact-heading-box{
-  text-align: center;
-  font-size: 21px;
-  margin-bottom: 5rem;
-}
-.projects-content{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  max-width: 30%;
-  row-gap: 20px;
-  padding: 10px;
-  border-radius: 20px;
-  align-items: center;
-  border: 5px solid blueviolet;
-}
-.projects-content p{
-  text-align: center;
-}
-
-.projects-contents{
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 8rem;
-  align-items: center;
-}
-.projects-content:hover{
-  transform: scale(1.1);
-  transition: 0.5s;
-}
-
-.contact-form{
-  border: 5px solid;
-  padding: 5px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  border-color: #a09c9c;
-  font-size: 21px;
-  margin: 50px auto;
-  max-width: 60%;
-  box-shadow: 0 10px 100px rgba(0,0,0,.1);
-  min-width: 70%;
-  min-height: 250px;
-  border: none;
-}
-
-.contact-form-field{
-  margin: 10px;
-  padding: 10px;
-  font-size: 25px;
-}
-
-.contact-form-field input,.contact-form-field label{
-  font-size: 25px;
-}
-
-#submitBtn{
-  font-size: 25px;
-  border-radius: 10px;
-}
-
-#submitBtn:hover{
-  background-color: black;
-  color: white;
-  cursor: pointer;
-}
-
-.contact-description{
-  font-size: 18px;
-  color: #333;
-  padding: 20px;
-  text-align: center;
-}
-input{
-  border: none;
-  background-color: lightgrey;
-  padding: 0.7rem;
-  border: 1px solid #ebebeb;
-  border-radius: 5px;
-  width: 100%;
-}
-
-.contact-heading-box{
-  margin: 20px 20px;
-}
-.contact-form-field{
-  font-size: 21px;
-}
-.projects{
-  box-shadow: 0 10px 100px rgba(0,0,0,.1);
-}
-
-.resume-download-btn{
-  font-size: 25px;
-  padding: 25px 45px;
-  border: none;
-  background: #7843e9;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-weight: 500;
-  border-radius: 5px;
-  box-shadow: 0 5px 15px 0 rgba(0,0,0,.15);
-  transition: transform .3s;
-}
-
-.resume-download-btn:hover{
-  transform: translatey(-8px);
-  cursor: pointer;
-}
-
-.main-section-info{
-  max-width: 40rem;
-  text-align: center;
-}
-
-.main-section-info span{
-  font-size: 25px;
-}
-
-.navList{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  
-}
-
-li{
-  list-style: none;
-  text-transform: uppercase;
-  margin: 0px 10px;
-}
-
-.footer{
-  background-color: black;
-  color: white;
-}
-
-.footer-container{
-  max-width: 120rem;
-  margin: auto;
-  width: 92%;
-}
-
-.footer-upper{
-  display: flex;
-  justify-content: space-between;
-  padding: 8rem 0;
-}
-
-.footer-upper-right{
-  width: 20%;
-  order: 1;
-  max-width: 50rem;
-}
-
-.footer-upper-left{
-  width: 60%;
-  order: 1;
-  max-width: 50rem;
-} */
 *{
   box-sizing: border-box;
   margin: 0;
@@ -372,6 +28,12 @@ nav{
 
 .active .section-container span{
   color: white;
+}
+
+.active .section-container ul li a:hover{
+  color: #fff;
+  background-color: white;
+  border-radius: 03px;
 }
 
 .navbar .section-container{
@@ -432,7 +94,7 @@ section{
 
 .main-section{
   display: flex;
-  background: url(https://chetannada.netlify.app/images/bannernew.jpg) no-repeat center;
+  background: url(https://images.hindustantimes.com/tech/img/2023/07/31/960x540/michail-sapiton-alCEnNmzhPE-unsplash_1690784496036_1690784504475.jpg) no-repeat center;
   height: 100vh;
   background-size: cover;
   background-attachment: fixed;
