--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   text-decoration: none;
 }
 
@@ -280,7 +280,7 @@ form input {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  /* justify-content: space-between; */
+  justify-content: space-between;
 }
 
 .info a {
@@ -391,4 +391,53 @@ footer {
 
 footer span a {
   color: crimson;
+}
+
+.hamberMenu{
+  color: white;
+  font-size: 23px;
+  cursor: pointer;
+  display: none;
+}
+
+@media screen and (max-width: 947px) {
+  .section-container .navList{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    left: -100%;
+    top: 0;
+    background: #111;
+    text-align: center;
+    padding-top: 40px;
+    transition: all 0.3s ease;
+  }
+
+  .hamberMenu{
+    display: block;
+    color: #fff;
+    z-index: 999;
+  }
+  
+  .section-container{
+    padding: 0px 23px;
+    max-width: 800px;
+  }
+
+  #about .about-content .column{
+    width: 100%;
+  }
+
+  #skills .section-container .skill-content .column{
+    width: 100%;
+  }
+
+  .my-name{
+    z-index: 999;
+    color: crimson;
+  }
+  
+  #contact .section-container .contact-content .column{
+    width: 100%;
+  }
 }
