--- a/src/App.css
+++ b/src/App.css
@@ -400,6 +400,10 @@ footer span a {
   display: none;
 }
 
+@media screen and (max-width: 500px) {
+
+}
+
 @media screen and (max-width: 947px) {
   #root{
     overflow-x: hidden;
@@ -438,14 +442,7 @@ footer span a {
   }
 
   .my-name{
-    word-wrap: break-word;
     color: crimson;
-    max-width: 300px;
-  }
-
-  .text{
-    word-wrap: break-word;
-    max-width: 300px;
   }
   
   #contact .section-container .contact-content .column{
