--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -13,6 +13,13 @@
   z-index: 999;
 }
 
+.hamberMenu{
+  color: white;
+  font-size: 23px;
+  cursor: pointer;
+  display: none;
+}
+
 .n-left{
   flex: 1;
   align-items: center;
@@ -54,4 +61,32 @@
 
 ul{
   list-style: none;
+}
+
+@media screen and (max-width: 947px) {
+  #root{
+    overflow-x: hidden;
+  }
+  .n-wrapper .n-right{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    left: -100%;
+    top: 0;
+    background: #111;
+    text-align: center;
+    padding-top: 40px;
+    transition: all 0.3s ease;
+  }
+
+  .active{
+    left: 0;
+  }
+
+  .hamberMenu{
+    display: block;
+    color: black;
+    z-index: 999;
+  }
+  
 }
