--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,27 +1,30 @@
 .projects {
   margin-top: 50px;
+  padding: 10px;
 }
-.projects-contents {
+.projects .section-container h1 {
+  text-align: center;
+  font-size: 45px;
+}
+.projects .projects-contents {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 10px;
 }
-.projects-contents .card {
+.projects .projects-contents .card {
   box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
   padding: 20px;
   display: flex;
   align-items: center;
   flex-direction: column;
   border-radius: 10px;
-  /* border: solid; */
-  height: 500px;
 }
-.card-content img {
+.projects .card-content img {
   border: 1px solid #aaaaaa;
   width: 100%;
-  height: 300px;
+  height: 200px;
 }
-.project-btn-box a{
+.projects .project-btn-box a{
   text-decoration: none;
   color: #000;
   margin-right: 20px;
@@ -29,4 +32,16 @@
   padding: 8px 25px;
   border-radius: 10px;
   color: #fff;
+}
+
+@media screen and (max-width: 981px){
+  .projects .projects-contents {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 441px){
+  .projects .projects-contents {
+    grid-template-columns: 1fr;
+  }
 }
