--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,47 +1,47 @@
 .mySkills {
   /* border: solid; */
-  margin-top: 150px;
+  margin-top: 50px;
 }
-.section-container h1 {
+.mySkills .section-container h1 {
   text-align: center;
-  font-size: 60px;
+  font-size: 45px;
 }
-.skill-content {
+.mySkills .skill-content {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   /* border: solid; */
 }
-.column-left {
+.mySkills .column-left {
   display: flex;
   justify-content: center;
   /* align-items: center; */
   flex-direction: column;
   padding: 0px 50px;
 }
-.column-left .text{
-  font-size: 35px;
+.mySkills .column-left .text{
+  font-size: 30px;
   font-weight: bold;
   text-transform: uppercase;
 }
-.column-left p {
-  font-size: 20px;
+.mySkills .column-left p {
+  font-size: 18px;
   line-height: 30px;
 }
-.column-right {
+.mySkills .column-right {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.column-right .info {
+.mySkills .column-right .info {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   padding: 10px;
 }
-.column-right .info a {
+.mySkills .column-right .info a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,6 +51,21 @@
   border-radius: 10px;
   box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 }
-.column-right .info a img {
+.mySkills .column-right .info a img {
   padding: 10px 40px;
+}
+
+@media screen and (max-width: 781px){
+  .mySkills {
+    margin-top: 50px;
+  }
+  .mySkills .column-right .info a {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (max-width: 441px){
+  .mySkills .column-left .text{
+    font-size: 25px;
+  }
 }
